# serializer version: 1
# name: test_main_all_versions
  '''
  Stub Song Title
  TMP_PATH_HERE/Stub Song Title.wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (Instrumental)
  TMP_PATH_HERE/Stub Song Title (Instrumental).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 250.1  
    size     │        │ 1024   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (A Cappella)
  TMP_PATH_HERE/Stub Song Title (A Cappella).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  '''
# ---
# name: test_main_all_versions.1
  _CallList([
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title.tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (Instrumental).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (A Cappella).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'save',
      tuple(
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_main_all_versions.2
  _CallList([
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title.wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (Instrumental).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav.tmp.wav',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
  ])
# ---
# name: test_main_default_versions
  '''
  Stub Song Title
  TMP_PATH_HERE/Stub Song Title.wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (Instrumental)
  TMP_PATH_HERE/Stub Song Title (Instrumental).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 250.1  
    size     │        │ 1024   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (A Cappella)
  TMP_PATH_HERE/Stub Song Title (A Cappella).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  '''
# ---
# name: test_main_default_versions.1
  _CallList([
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title.tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (Instrumental).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (A Cappella).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'save',
      tuple(
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_main_default_versions.2
  _CallList([
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title.wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (Instrumental).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav.tmp.wav',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
  ])
# ---
# name: test_main_filenames_all_versions
  '''
  Stub Song Title
  TMP_PATH_HERE/Stub Song Title.wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (Instrumental)
  TMP_PATH_HERE/Stub Song Title (Instrumental).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 250.1  
    size     │        │ 1024   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (A Cappella)
  TMP_PATH_HERE/Stub Song Title (A Cappella).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  Stub Song Title
  TMP_PATH_HERE/Stub Song Title.wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │ 250.1  │ 1.0    
    size     │ 1024   │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (Instrumental)
  TMP_PATH_HERE/Stub Song Title (Instrumental).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │ 250.1  │ 1.0    
    size     │ 1024   │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  Stub Song Title (A Cappella)
  TMP_PATH_HERE/Stub Song Title (A Cappella).wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │ 250.1  │ 1.0    
    size     │ 1024   │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  '''
# ---
# name: test_main_filenames_all_versions.1
  _CallList([
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title.tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (Instrumental).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (A Cappella).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'save',
      tuple(
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title.tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (Instrumental).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title (A Cappella).tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'save',
      tuple(
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_main_filenames_all_versions.2
  _CallList([
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title.wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (Instrumental).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav.tmp.wav',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title.wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title.wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (Instrumental).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (Instrumental).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=3.0:start_threshold=0.02,areverse,atrim=start=0.2,silenceremove=start_periods=1:start_silence=1.0:start_threshold=0.02',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav.tmp.wav',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
  ])
# ---
# name: test_main_main_version
  '''
  Stub Song Title
  TMP_PATH_HERE/Stub Song Title.wav
             ╷        ╷        
             │ Before │ After  
  ╶──────────┼────────┼───────╴
    duration │        │ 1.0    
    size     │        │ 42.0   
             ╵        ╵        
   Rendered in 0:00:00, a infx 
             speedup           
  
  '''
# ---
# name: test_main_main_version.1
  _CallList([
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        'Stub Song Title.tmp',
      ),
      dict({
      }),
    ),
    _Call(
      'perform_action',
      tuple(
        42230,
      ),
      dict({
      }),
    ),
    _Call(
      'set_info_string',
      tuple(
        'RENDER_PATTERN',
        '$project',
      ),
      dict({
      }),
    ),
    _Call(
      'save',
      tuple(
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_main_main_version.2
  _CallList([
    _Call(
      tuple(
        list([
          'ffmpeg',
          '-i',
          'TMP_PATH_HERE/Stub Song Title.wav',
          '-filter:a',
          'volumedetect,ebur128=framelog=verbose',
          '-hide_banner',
          '-nostats',
          '-f',
          'null',
          '/dev/null',
        ]),
      ),
      dict({
        'check': True,
        'stderr': -1,
        'text': True,
      }),
    ),
  ])
# ---
# name: test_main_mocked_calls
  dict({
    'duration_delta': _CallList([
    ]),
    'get_int_config_var': _CallList([
      _Call(
        '',
        tuple(
          'offlineinact',
          -666,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          -666,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          -666,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          -666,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          -666,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          -666,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          -666,
        ),
        dict({
        }),
      ),
    ]),
    'open_project': _CallList([
      _Call(
        '',
        tuple(
          'TMP_PATH_HERE/path/to/some project/some project.rpp',
        ),
        dict({
        }),
      ),
    ]),
    'project': _CallList([
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title.tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'perform_action',
        tuple(
          42230,
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          '$project',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (Instrumental).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'perform_action',
        tuple(
          42230,
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          '$project',
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          'Stub Song Title (A Cappella).tmp',
        ),
        dict({
        }),
      ),
      _Call(
        'perform_action',
        tuple(
          42230,
        ),
        dict({
        }),
      ),
      _Call(
        'set_info_string',
        tuple(
          'RENDER_PATTERN',
          '$project',
        ),
        dict({
        }),
      ),
      _Call(
        'save',
        tuple(
        ),
        dict({
        }),
      ),
    ]),
    'set_int_config_var': _CallList([
      _Call(
        '',
        tuple(
          'runafterstop',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          999,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          999,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          999,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          999,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          0,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runafterstop',
          999,
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          'runallonstop',
          999,
        ),
        dict({
        }),
      ),
    ]),
    'upload': _CallList([
      _Call(
        '',
        tuple(
          ClientSession(
            ATTRS=frozenset({
              '_auto_decompress',
              '_base_url',
              '_connector',
              '_connector_owner',
              '_cookie_jar',
              '_default_auth',
              '_default_headers',
              '_json_serialize',
              '_loop',
              '_max_field_size',
              '_max_line_size',
              '_raise_for_status',
              '_read_bufsize',
              '_request_class',
              '_requote_redirect_url',
              '_resolve_charset',
              '_response_class',
              '_skip_auto_headers',
              '_source_traceback',
              '_timeout',
              '_trace_configs',
              '_trust_env',
              '_version',
              '_ws_response_class',
              'requote_redirect_url',
            }),
            auth=None,
            auto_decompress=True,
            closed=True,
            connector=None,
            connector_owner=True,
            cookie_jar=CookieJar(
              DATE_DAY_OF_MONTH_RE=re.compile('(\\d{1,2})'),
              DATE_HMS_TIME_RE=re.compile('(\\d{1,2}):(\\d{1,2}):(\\d{1,2})'),
              DATE_MONTH_RE=re.compile('(jan)|(feb)|(mar)|(apr)|(may)|(jun)|(jul)|(aug)|(sep)|(oct)|(nov)|(dec)', re.IGNORECASE),
              DATE_TOKENS_RE=re.compile('[\\x09\\x20-\\x2F\\x3B-\\x40\\x5B-\\x60\\x7B-\\x7E]*(?P<token>[\\x00-\\x08\\x0A-\\x1F\\d:a-zA-Z\\x7F-\\xFF]+)'),
              DATE_YEAR_RE=re.compile('(\\d{2,4})'),
              MAX_TIME=253402300799,
              SUB_MAX_TIME=253402300798,
            ),
            headers=<CIMultiDict()>,
            loop=<_UnixSelectorEventLoop running=False closed=True debug=False>,
            raise_for_status=False,
            requote_redirect_url=True,
            skip_auto_headers=frozenset({
            }),
            timeout=ClientTimeout(total=300, connect=None, sock_read=None, sock_connect=None, ceil_threshold=5),
            trace_configs=list([
            ]),
            trust_env=False,
            version=HttpVersion(
              major=1,
              minor=1,
            ),
          ),
          'stub-fake-token',
          list([
            'TMP_PATH_HERE/Stub Song Title.wav',
          ]),
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          ClientSession(
            ATTRS=frozenset({
              '_auto_decompress',
              '_base_url',
              '_connector',
              '_connector_owner',
              '_cookie_jar',
              '_default_auth',
              '_default_headers',
              '_json_serialize',
              '_loop',
              '_max_field_size',
              '_max_line_size',
              '_raise_for_status',
              '_read_bufsize',
              '_request_class',
              '_requote_redirect_url',
              '_resolve_charset',
              '_response_class',
              '_skip_auto_headers',
              '_source_traceback',
              '_timeout',
              '_trace_configs',
              '_trust_env',
              '_version',
              '_ws_response_class',
              'requote_redirect_url',
            }),
            auth=None,
            auto_decompress=True,
            closed=True,
            connector=None,
            connector_owner=True,
            cookie_jar=CookieJar(
              DATE_DAY_OF_MONTH_RE=re.compile('(\\d{1,2})'),
              DATE_HMS_TIME_RE=re.compile('(\\d{1,2}):(\\d{1,2}):(\\d{1,2})'),
              DATE_MONTH_RE=re.compile('(jan)|(feb)|(mar)|(apr)|(may)|(jun)|(jul)|(aug)|(sep)|(oct)|(nov)|(dec)', re.IGNORECASE),
              DATE_TOKENS_RE=re.compile('[\\x09\\x20-\\x2F\\x3B-\\x40\\x5B-\\x60\\x7B-\\x7E]*(?P<token>[\\x00-\\x08\\x0A-\\x1F\\d:a-zA-Z\\x7F-\\xFF]+)'),
              DATE_YEAR_RE=re.compile('(\\d{2,4})'),
              MAX_TIME=253402300799,
              SUB_MAX_TIME=253402300798,
            ),
            headers=<CIMultiDict()>,
            loop=<_UnixSelectorEventLoop running=False closed=True debug=False>,
            raise_for_status=False,
            requote_redirect_url=True,
            skip_auto_headers=frozenset({
            }),
            timeout=ClientTimeout(total=300, connect=None, sock_read=None, sock_connect=None, ceil_threshold=5),
            trace_configs=list([
            ]),
            trust_env=False,
            version=HttpVersion(
              major=1,
              minor=1,
            ),
          ),
          'stub-fake-token',
          list([
            'TMP_PATH_HERE/Stub Song Title (Instrumental).wav',
          ]),
        ),
        dict({
        }),
      ),
      _Call(
        '',
        tuple(
          ClientSession(
            ATTRS=frozenset({
              '_auto_decompress',
              '_base_url',
              '_connector',
              '_connector_owner',
              '_cookie_jar',
              '_default_auth',
              '_default_headers',
              '_json_serialize',
              '_loop',
              '_max_field_size',
              '_max_line_size',
              '_raise_for_status',
              '_read_bufsize',
              '_request_class',
              '_requote_redirect_url',
              '_resolve_charset',
              '_response_class',
              '_skip_auto_headers',
              '_source_traceback',
              '_timeout',
              '_trace_configs',
              '_trust_env',
              '_version',
              '_ws_response_class',
              'requote_redirect_url',
            }),
            auth=None,
            auto_decompress=True,
            closed=True,
            connector=None,
            connector_owner=True,
            cookie_jar=CookieJar(
              DATE_DAY_OF_MONTH_RE=re.compile('(\\d{1,2})'),
              DATE_HMS_TIME_RE=re.compile('(\\d{1,2}):(\\d{1,2}):(\\d{1,2})'),
              DATE_MONTH_RE=re.compile('(jan)|(feb)|(mar)|(apr)|(may)|(jun)|(jul)|(aug)|(sep)|(oct)|(nov)|(dec)', re.IGNORECASE),
              DATE_TOKENS_RE=re.compile('[\\x09\\x20-\\x2F\\x3B-\\x40\\x5B-\\x60\\x7B-\\x7E]*(?P<token>[\\x00-\\x08\\x0A-\\x1F\\d:a-zA-Z\\x7F-\\xFF]+)'),
              DATE_YEAR_RE=re.compile('(\\d{2,4})'),
              MAX_TIME=253402300799,
              SUB_MAX_TIME=253402300798,
            ),
            headers=<CIMultiDict()>,
            loop=<_UnixSelectorEventLoop running=False closed=True debug=False>,
            raise_for_status=False,
            requote_redirect_url=True,
            skip_auto_headers=frozenset({
            }),
            timeout=ClientTimeout(total=300, connect=None, sock_read=None, sock_connect=None, ceil_threshold=5),
            trace_configs=list([
            ]),
            trust_env=False,
            version=HttpVersion(
              major=1,
              minor=1,
            ),
          ),
          'stub-fake-token',
          list([
            'TMP_PATH_HERE/Stub Song Title (A Cappella).wav',
          ]),
        ),
        dict({
        }),
      ),
    ]),
  })
# ---
# name: test_main_noop
  '''
  Usage: render [OPTIONS] [PROJECT_DIRS]...
  Try 'render --help' for help.
  
  Error: nothing to render
  
  '''
# ---
# name: test_main_noop.1
  _CallList([
  ])
# ---
# name: test_render_result_render_speedup
  _CallList([
    _Call(
      tuple(
        list([
          'ffprobe',
          '-i',
          'TMP_PATH_HERE',
          '-show_entries',
          'format=duration',
        ]),
      ),
      dict({
        'capture_output': True,
        'check': True,
        'text': True,
      }),
    ),
  ])
# ---
